# lattice

./: .cspell.json  .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  NOTICE  README.md  deny.toml  index.html  print.html  searcher-c2a407aa.js  searchindex-2ddae7e5.js  searchindex-39c21381.js  searchindex-3b13cfa8.js
crates/horizon-lattice/: Cargo.toml
crates/horizon-lattice-core/: Cargo.toml
crates/horizon-lattice-core/src/: application.rs  async_runtime.rs  error.rs  event.rs  invocation.rs  lib.rs  logging.rs  meta.rs  object.rs  progress.rs  property.rs  scheduler.rs  signal.rs  task.rs  thread_check.rs  threadpool.rs  timer.rs  worker.rs
crates/horizon-lattice-core/tests/: derive_object.rs
crates/horizon-lattice-macros/: Cargo.toml
crates/horizon-lattice-macros/src/: lib.rs
crates/horizon-lattice-multimedia/: Cargo.toml
crates/horizon-lattice-multimedia/src/: audio.rs  error.rs  lib.rs  sound_effects.rs  timers.rs
crates/horizon-lattice-net/: Cargo.toml
crates/horizon-lattice-net/src/: error.rs  lib.rs  tls.rs
crates/horizon-lattice-net/src/dns/: config.rs  mod.rs  resolver.rs
crates/horizon-lattice-net/src/graphql/: client.rs  mod.rs  request.rs  response.rs  subscription.rs
crates/horizon-lattice-net/src/grpc/: channel.rs  metadata.rs  mod.rs  status.rs
crates/horizon-lattice-net/src/http/: async_client.rs  client.rs  download.rs  mod.rs  request.rs  response.rs  rest_api.rs  upload.rs
crates/horizon-lattice-net/src/network_info/: interface.rs  mod.rs  monitor.rs
crates/horizon-lattice-net/src/tcp/: client.rs  config.rs  connection.rs  mod.rs  server.rs  state.rs
crates/horizon-lattice-net/src/udp/: config.rs  mod.rs  socket.rs  state.rs
crates/horizon-lattice-net/src/websocket/: client.rs  message.rs  mod.rs
crates/horizon-lattice-net/tests/: dns_tests.rs  http_client_tests.rs  network_info_tests.rs  rest_api_tests.rs  tcp_tests.rs  transfer_tests.rs  udp_tests.rs  websocket_tests.rs
crates/horizon-lattice-render/: Cargo.toml
crates/horizon-lattice-render/examples/: gradients.rs  multi_window.rs  offscreen_capture.rs  simple_shapes.rs  window_management_test.rs
crates/horizon-lattice-render/src/: animated_image.rs  async_image.rs  atlas.rs  capture.rs  context.rs  damage.rs  disk_cache.rs  embedded_icon.rs  error.rs  gpu_renderer.rs  gradient.rs  icon.rs  image.rs  image_buffer.rs  image_cache.rs  image_data.rs  layer.rs  lib.rs  offscreen.rs  paint.rs  path.rs  renderer.rs  scalable_image.rs  shader_watcher.rs  stencil.rs  surface.rs  svg.rs  svg_cache.rs  text_render_pass.rs  text_renderer.rs  transform.rs  types.rs
crates/horizon-lattice-render/src/shaders/: composite.wgsl  image.wgsl  rect.wgsl  shadow.wgsl  solid.wgsl  text.wgsl
crates/horizon-lattice-render/src/text/: bidi.rs  font.rs  font_system.rs  glyph_atlas.rs  glyph_cache.rs  layout.rs  mod.rs  rich_text.rs  shaping.rs  types.rs
crates/horizon-lattice-render/tests/: offscreen_tests.rs  surface_tests.rs
crates/horizon-lattice-style/: Cargo.toml
crates/horizon-lattice-style/src/: error.rs  lib.rs  widget.rs
crates/horizon-lattice-style/src/hot_reload/: mod.rs  watcher.rs
crates/horizon-lattice-style/src/icon_theme/: loader.rs  mod.rs  resolver.rs  types.rs
crates/horizon-lattice-style/src/parser/: css_parser.rs  error.rs  mod.rs
crates/horizon-lattice-style/src/resolve/: cache.rs  cascade.rs  engine.rs  inheritance.rs  mod.rs
crates/horizon-lattice-style/src/rules/: mod.rs  rule.rs  stylesheet.rs
crates/horizon-lattice-style/src/selector/: matcher.rs  mod.rs  specificity.rs  types.rs
crates/horizon-lattice-style/src/style/: builder.rs  computed.rs  mod.rs  properties.rs
crates/horizon-lattice-style/src/theme/: builtin.rs  mod.rs  palette.rs  variables.rs
crates/horizon-lattice-style/src/types/: mod.rs  value.rs
crates/horizon-lattice/examples/: verification.rs
crates/horizon-lattice/src/: lib.rs  prelude.rs
crates/horizon-lattice/src/file/: async_directory.rs  compression.rs  csv_support.rs  directory.rs  error.rs  info.rs  ini_support.rs  json.rs  mmap.rs  mod.rs  operations.rs  path.rs  reader.rs  resource.rs  settings.rs  temp.rs  toml_support.rs  watcher.rs  writer.rs  xml_support.rs
crates/horizon-lattice/src/model/: delegate.rs  index.rs  list_model.rs  mod.rs  proxy_model.rs  role.rs  selection.rs  table_model.rs  traits.rs  tree_model.rs
crates/horizon-lattice/src/platform/: clipboard.rs  desktop_integration.rs  file_associations.rs  file_uri.rs  hardware.rs  high_contrast.rs  localization.rs  macos_menu.rs  mod.rs  notifications.rs  power_management.rs  session_management.rs  system_theme.rs
crates/horizon-lattice/src/widget/: base.rs  completer.rs  cursor.rs  dispatcher.rs  drag_drop.rs  events.rs  file_drop.rs  focus.rs  geometry.rs  gesture.rs  ime.rs  input_context.rs  input_mask.rs  keyboard.rs  mod.rs  modal.rs  mouse.rs  painting.rs  shortcut.rs  tests.rs  touch.rs  traits.rs  validator.rs  widget_timer.rs
crates/horizon-lattice/src/widget/accessibility/: manager.rs  mod.rs  node.rs  role.rs
crates/horizon-lattice/src/widget/animation/: easing.rs  mod.rs  transition.rs
crates/horizon-lattice/src/widget/layout/: anchor_layout.rs  base.rs  box_layout.rs  flow_layout.rs  form_layout.rs  grid_layout.rs  invalidation.rs  item.rs  mod.rs  stack_layout.rs  traits.rs
crates/horizon-lattice/src/widget/widgets/: about_dialog.rs  abstract_button.rs  action.rs  button_group.rs  calendar.rs  checkbox.rs  color_button.rs  color_dialog.rs  color_palette_popup.rs  color_picker.rs  combo_box.rs  container.rs  date_edit.rs  date_time_edit.rs  dial.rs  dialog.rs  dialog_button_box.rs  dock_widget.rs  double_spin_box.rs  file_dialog.rs  find_replace.rs  font_combo_box.rs  font_dialog.rs  frame.rs  group_box.rs  header_view.rs  image_widget.rs  input_dialog.rs  label.rs  (+44 more)
crates/horizon-lattice/src/window/: event_router.rs  frameless_chrome.rs  mod.rs  native_window.rs  window_config.rs  window_effects.rs  window_geometry.rs  window_icon.rs  window_manager.rs  window_type.rs
(+134 files in other folders)
