[workspace]
resolver = "2"
members = [
    "crates/horizon-lattice",
    "crates/horizon-lattice-core",
    "crates/horizon-lattice-macros",
    "crates/horizon-lattice-render",
    "crates/horizon-lattice-style",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/horizon-analytic-studios/horizon-lattice"
authors = ["Horizon Analytic Studios, LLC"]

[workspace.dependencies]
# Core dependencies
winit = "0.30"
parking_lot = "0.12"
slotmap = "1.0"
tracing = "0.1"
thiserror = "2.0"

# Graphics dependencies
wgpu = "24"
bytemuck = { version = "1.14", features = ["derive"] }
glam = "0.29"
pollster = "0.4"
image = "0.25"
lyon = "1.0"

# Clipboard support
arboard = "3"

# Text rendering dependencies
cosmic-text = "0.12"
fontdb = "0.16"
ttf-parser = "0.21"
sys-locale = "0.3"
unicode-segmentation = "1.12"
unicode-bidi = "0.3"

# Proc-macro dependencies
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

# File watching (for shader hot-reload)
notify = "7"
notify-debouncer-mini = "0.5"

# CSS parsing
cssparser = "0.34"

# Compile-time assertions
static_assertions = "1.1"

# Regular expressions
regex = "1"

# Rope data structure for large text documents
ropey = "1.6"

# Date and time handling
chrono = "0.4"
chrono-tz = "0.10"

# Native dialog dependencies (macOS)
objc2 = "0.6"
objc2-foundation = { version = "0.3", default-features = false, features = ["NSString", "NSURL", "NSArray", "NSEnumerator"] }
objc2-app-kit = { version = "0.3", default-features = false, features = [
    "NSPanel", "NSSavePanel", "NSOpenPanel",
    "NSAlert", "NSApplication", "NSWindow", "NSResponder", "NSButton",
    "NSColorPanel", "NSColor", "NSColorSpace",
    "NSFontPanel", "NSFontManager", "NSFont", "NSFontDescriptor",
    "NSView", "NSRunningApplication", "NSGraphics", "NSControl", "NSCell",
] }
block2 = "0.6"

# Native dialog dependencies (Windows)
windows = { version = "0.58", features = [
    "Win32_UI_Shell_Common",
    "Win32_UI_Shell",
    "Win32_UI_Controls_Dialogs",
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_System_Com",
] }

# Native dialog dependencies (Linux)
ashpd = "0.10"
zbus = "5"

# Internal crates
horizon-lattice-core = { path = "crates/horizon-lattice-core" }
horizon-lattice-macros = { path = "crates/horizon-lattice-macros" }
horizon-lattice-render = { path = "crates/horizon-lattice-render" }
horizon-lattice-style = { path = "crates/horizon-lattice-style" }
