[workspace]
resolver = "2"
members = [
    "crates/horizon-lattice",
    "crates/horizon-lattice-core",
    "crates/horizon-lattice-macros",
    "crates/horizon-lattice-multimedia",
    "crates/horizon-lattice-net",
    "crates/horizon-lattice-render",
    "crates/horizon-lattice-style",
]

[workspace.package]
version = "1.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/horizon-analytic-studios/horizon-lattice"
authors = ["Horizon Analytic Studios, LLC"]
documentation = "https://github.com/horizon-analytic-studios/horizon-lattice/tree/main/docs"

[workspace.dependencies]
# Core dependencies
winit = "0.30"
raw-window-handle = "0.6"
cursor-icon = "1.1"
parking_lot = "0.12"
slotmap = "1.0"
tracing = "0.1"
thiserror = "2.0"

# Threading dependencies
rayon = "1.10"
crossbeam-channel = "0.5"

# Graphics dependencies
wgpu = "24"
bytemuck = { version = "1.14", features = ["derive"] }
glam = "0.29"
pollster = "0.4"
image = "0.25"
lyon = "1.0"

# Clipboard support
arboard = "3"

# Text rendering dependencies
cosmic-text = "0.12"
fontdb = "0.16"
ttf-parser = "0.21"
sys-locale = "0.3"
unicode-segmentation = "1.12"
unicode-bidi = "0.3"

# Proc-macro dependencies
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

# Embedded resources (compile-time file embedding)
include_dir = "0.7"

# File watching (for shader hot-reload)
notify = "7"
notify-debouncer-mini = "0.5"
notify-debouncer-full = "0.4"

# Memory-mapped files
memmap2 = "0.9"

# CSS parsing
cssparser = "0.34"

# Compile-time assertions
static_assertions = "1.1"

# Regular expressions
regex = "1"

# Rope data structure for large text documents
ropey = "1.6"

# Date and time handling
chrono = "0.4"
chrono-tz = "0.10"

# System tray support
tray-icon = "0.21"

# Desktop notifications
notify-rust = "4"

# System theme detection
dark-light = "1"

# File opener (open files/URLs with default application)
open = "5"

# Standard directory paths (home, config, data, cache, documents)
directories = "6"

# Native dialog dependencies (macOS)
objc2 = "0.6"
objc2-foundation = { version = "0.3", default-features = false, features = ["NSString", "NSURL", "NSArray", "NSEnumerator"] }
objc2-app-kit = { version = "0.3", default-features = false, features = [
    "NSPanel", "NSSavePanel", "NSOpenPanel",
    "NSAlert", "NSApplication", "NSWindow", "NSResponder", "NSButton",
    "NSColorPanel", "NSColor", "NSColorSpace",
    "NSFontPanel", "NSFontManager", "NSFont", "NSFontDescriptor",
    "NSView", "NSRunningApplication", "NSGraphics", "NSControl", "NSCell",
    "NSWorkspace", "NSAccessibility",
    "NSPasteboard",
    "NSDockTile",
    "NSScreen",
    # Menu support for macOS global menu bar
    "NSMenu", "NSMenuItem", "NSEvent",
] }
block2 = "0.6"
core-foundation = "0.10"
io-kit-sys = "0.4"

# Native dialog dependencies (Windows)
windows = { version = "0.58", features = [
    "Win32_UI_Shell_Common",
    "Win32_UI_Shell",
    "Win32_UI_Controls_Dialogs",
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_DataExchange",
    "Win32_System_LibraryLoader",
    "Win32_System_Power",
    "Win32_System_Shutdown",
    "Win32_UI_HiDpi",
    "UI_ViewManagement",
] }

# X11 clipboard support (Linux)
x11-clipboard = "0.9"

# Native dialog dependencies (Linux)
ashpd = "0.10"
zbus = "5"
futures-util = "0.3"
tokio-stream = "0.1"
async-stream = "0.3"
pin-project-lite = "0.2"

# Accessibility
accesskit = "0.18"
accesskit_winit = "0.24"

# Power management
starship-battery = "0.10"
keepawake = "0.5"
zbus_systemd = { version = "0.0.15", features = ["login1"] }

# Localization (ICU4X for locale-aware formatting)
icu = { version = "2.1", default-features = false, features = ["compiled_data"] }

# DNS resolution
hickory-resolver = { version = "0.25", features = ["tokio"] }

# Network information
netdev = "0.32"
netwatcher = "0.2"

# HTTP/Networking
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "stream",
    "multipart",
    "cookies",
    "rustls-tls",
] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "macros", "net", "io-util", "fs"] }
tokio-tungstenite = { version = "0.26", default-features = false, features = ["connect", "rustls-tls-native-roots"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
rustls-pemfile = "2"
rustls-pki-types = "1"
webpki-roots = "0.26"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rust-ini = "0.21"
quick-xml = { version = "0.37", features = ["serialize"] }
csv = "1.3"
tempfile = "3"
flate2 = "1.0"        # Gzip compression
zip = "2.2"           # ZIP archives
tar = "0.4"           # TAR archives
url = "2"
http = "1"
bytes = "1"
base64 = "0.22"

# gRPC dependencies
tonic = { version = "0.13", features = ["tls-ring", "tls-native-roots", "transport", "channel"] }
prost = "0.13"
tower = "0.5"
hyper-util = "0.1"

# Internal crates
horizon-lattice-core = { path = "crates/horizon-lattice-core" }
horizon-lattice-macros = { path = "crates/horizon-lattice-macros" }
horizon-lattice-multimedia = { path = "crates/horizon-lattice-multimedia" }
horizon-lattice-net = { path = "crates/horizon-lattice-net" }
horizon-lattice-render = { path = "crates/horizon-lattice-render" }
horizon-lattice-style = { path = "crates/horizon-lattice-style" }
