[package]
name = "horizon-lattice-core"
description = "Core systems for Horizon Lattice: event loop, signals, properties"
readme = "../../README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
documentation.workspace = true
categories = ["gui"]
keywords = ["signals", "slots", "events", "properties", "reactive"]

[features]
default = []
tokio = ["dep:tokio"]

[dependencies]
winit = { workspace = true }
parking_lot = { workspace = true }
slotmap = { workspace = true }
tracing = { workspace = true }
rayon = { workspace = true }
crossbeam-channel = { workspace = true }
tokio = { workspace = true, optional = true }
static_assertions = { workspace = true }

[dev-dependencies]
horizon-lattice-macros = { path = "../horizon-lattice-macros" }
tokio = { workspace = true }
