[package]
name = "horizon-lattice-macros"
description = "Procedural macros for Horizon Lattice meta-object system"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
documentation.workspace = true
categories = ["development-tools::procedural-macro-helpers"]
keywords = ["derive", "macro", "proc-macro", "code-generation", "gui"]

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
