[package]
name = "horizon-lattice-multimedia"
description = "Multimedia module for Horizon Lattice: audio playback, sound effects"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []
high-precision-timers = ["dep:spin_sleep"]

[dependencies]
horizon-lattice-core = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

# Audio playback
rodio = "0.20"

# High-precision timers (optional)
spin_sleep = { version = "1.2", optional = true }

[dev-dependencies]
tempfile = { workspace = true }
