[package]
name = "horizon-lattice-render"
description = "Graphics rendering backend for Horizon Lattice using wgpu"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
documentation.workspace = true
categories = ["rendering::engine", "graphics"]
keywords = ["rendering", "wgpu", "graphics", "2d", "gpu"]

[features]
default = []
shader-hot-reload = ["dep:notify", "dep:notify-debouncer-mini"]
networking = ["dep:horizon-lattice-net", "dep:tokio"]

[dependencies]
# Graphics
wgpu = { workspace = true }
bytemuck = { workspace = true }
glam = { workspace = true }
lyon = { workspace = true }

# Platform integration
winit = { workspace = true }

# Utilities
parking_lot = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

# Async (for device request)
pollster = { workspace = true }

# Image handling
image = { workspace = true }

# EXIF metadata
kamadak-exif = "0.6"

# SVG rendering
resvg = "0.44"

# Text rendering
cosmic-text = { workspace = true }
fontdb = { workspace = true }
ttf-parser = { workspace = true }
sys-locale = { workspace = true }
unicode-segmentation = { workspace = true }
unicode-bidi = { workspace = true }

# Shader hot-reload (optional)
notify = { workspace = true, optional = true }
notify-debouncer-mini = { workspace = true, optional = true }

# Networking (optional, for URL loading)
horizon-lattice-net = { path = "../horizon-lattice-net", version = "1.0.0", optional = true }
tokio = { workspace = true, features = ["rt"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
tracing-subscriber = "0.3"

[[example]]
name = "simple_shapes"
path = "examples/simple_shapes.rs"

[[example]]
name = "multi_window"
path = "examples/multi_window.rs"

[[example]]
name = "offscreen_capture"
path = "examples/offscreen_capture.rs"
