[package]
name = "horizon-lattice"
description = "A Rust-native GUI framework inspired by Qt6"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
horizon-lattice-core = { workspace = true }
horizon-lattice-macros = { workspace = true }
horizon-lattice-render = { workspace = true }
winit = { workspace = true }
cursor-icon = { workspace = true }
parking_lot = { workspace = true }
static_assertions = { workspace = true }
unicode-segmentation = { workspace = true }
arboard = { workspace = true }
regex = { workspace = true }
ropey = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
tray-icon = { workspace = true }

# Native dialog dependencies (macOS)
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { workspace = true }
objc2-foundation = { workspace = true }
objc2-app-kit = { workspace = true }
block2 = { workspace = true }

# Native dialog dependencies (Windows)
[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true }

# Native dialog dependencies (Linux)
[target.'cfg(target_os = "linux")'.dependencies]
ashpd = { workspace = true }
zbus = { workspace = true }
pollster = { workspace = true }

[dev-dependencies]
slotmap = { workspace = true }
