[package]
name = "horizon-lattice"
description = "A Rust-native GUI framework inspired by Qt6"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = ["accessibility", "notifications", "power-management", "system-theme"]
accessibility = ["dep:accesskit", "dep:accesskit_winit"]
notifications = ["dep:notify-rust"]
# Linux-only: Enable notification actions and advanced urgency levels
notification-actions = ["notifications"]
# Power management (battery status, sleep prevention, power events)
power-management = ["dep:starship-battery", "dep:keepawake"]
# System theme detection (dark/light mode, accent color)
system-theme = ["dep:dark-light"]
# Localization (locale-aware formatting for numbers, dates, times, currencies)
localization = ["dep:icu", "dep:sys-locale"]
# Networking (HTTP client, WebSocket, TCP/UDP sockets)
networking = ["dep:horizon-lattice-net"]

[dependencies]
horizon-lattice-core = { workspace = true }
horizon-lattice-macros = { workspace = true }
horizon-lattice-render = { workspace = true }
horizon-lattice-style = { workspace = true }
winit = { workspace = true }
raw-window-handle = { workspace = true }
cursor-icon = { workspace = true }
parking_lot = { workspace = true }
static_assertions = { workspace = true }
unicode-segmentation = { workspace = true }
arboard = { workspace = true }
regex = { workspace = true }
ropey = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
tray-icon = { workspace = true }
image = { workspace = true }

# Accessibility (optional)
accesskit = { workspace = true, optional = true }
accesskit_winit = { workspace = true, optional = true }

# Notifications (optional)
notify-rust = { workspace = true, optional = true }

# Power management (optional)
starship-battery = { workspace = true, optional = true }
keepawake = { workspace = true, optional = true }

# System theme detection (optional)
dark-light = { workspace = true, optional = true }

# Localization (optional)
icu = { workspace = true, optional = true }
sys-locale = { workspace = true, optional = true }
unicode-bidi = { workspace = true }

# Networking (optional)
horizon-lattice-net = { workspace = true, optional = true }

# File opener (open files/URLs with default application)
open = { workspace = true }

# Native dialog dependencies (macOS)
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { workspace = true }
objc2-foundation = { workspace = true }
objc2-app-kit = { workspace = true }
block2 = { workspace = true }
core-foundation = { workspace = true }
io-kit-sys = { workspace = true }

# Native dialog dependencies (Windows)
[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true }

# Native dialog dependencies (Linux)
[target.'cfg(target_os = "linux")'.dependencies]
ashpd = { workspace = true }
zbus = { workspace = true }
zbus_systemd = { workspace = true }
pollster = { workspace = true }
x11-clipboard = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
slotmap = { workspace = true }
